# jilo-cli-haskell

./: README.md  jilo.cabal
app/: Main.hs
src/Jilo/: Cli.hs  Commands.hs  Note.hs
