name:                jilo
version:             0.1.0.0
synopsis:            Note-taking software for people who don't have time to organize their tidbits (Haskell CLI client)
description:         Please see README.md
homepage:            https://github.com/FunctioningIdiots/jilo-cli-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              kazark@zoho.com
maintainer:          Keith Pinson
copyright:           MIT
category:            Notes
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
                     , Jilo.Note
                     , Jilo.Cli
                     , Jilo.Commands
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , text
                     , lens
                     , aeson
                     , lens-aeson
                     , vector
  default-language:    Haskell2010

executable jilo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jilo
                     , bytestring
                     , text
  default-language:    Haskell2010

test-suite jilo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jilo
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/FunctioningIdiots/jilo-cli-haskell
